updated landing page

--- a/index.html
+++ b/index.html
@@ -53,35 +53,47 @@
 
         <div class="about-us cards">
           
-          <div class="about-image"></div>
+          <div class="card-image">
+            <img class="card-image" src="images/about_us.jpg">
+          </div>
 
           <div class="about-content">
         <h3>About Us</h3>
         <p>The Dream Center serves as a resource center focused on providing support to those affected by homelessness, hunger, and the lack of education through residential and community outreach programs.</p>
+
+        <button type="submit" name="submit" class="see-more-button">SEE MORE</button>
       </div>
       </div>
 
       <div class="get-involved cards">
 
-        <div class="get-involved-image"></div>
+        <div class="card-image">
+          <img class="card-image" src="images/get_involed_programs.jpg">
+        </div>
 
         <div class="get-involved-content">
           <h3>Get Involed/Programs</h3>
           <p>Our Outreach Programs provide free assistance to those struggling in the surrounding communities in the form of food, clothing, furniture, childrens’ programs and more. This support allows families and individuals to focus on their personal growth, family health, and stability while having basic needs met on a consistent basis.</p>
+
+          <button type="submit" name="submit" class="see-more-button">SEE MORE</button>
         </div>
 
       </div>
 
       <div class="donate cards">
 
-          <div class="donate-image"></div>
+          <div class="card-image">
+            <img class="card-image" src="images/donate_contact.jpg">
+          </div>
 
             <div class="donate-content">
               <h3>Donate/Contact</h3>
               <p> Donations can make a difference in the lives of many in Philadelphia by providing financial support through a one-time gift, a monthly pledge, or by becoming a program or event sponsor. Making a financial contribution online is the fastest, easiest, and safest way to help move our mission of impacting and restoring lives</p>
+
+              <button type="submit" name="submit" class="see-more-button">SEE MORE</button>
             </div>
       </div>
-
+ 
       </div>
 
       
