--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
         <div class="about-us cards">
           
-          <div class="card-image">
-            <img class="card-image" src="images/about_us.jpg">
+          <div class="card-image1">
+            <!-- <img class="card-image" src="images/about_us.jpg"> -->
           </div>
 
           <div class="about-content">
@@ -67,10 +67,7 @@
 
       <div class="get-involved cards">
 
-        <div class="card-image">
-          <img class="card-image" src="images/get_involed_programs.jpg">
-        </div>
-
+      
         <div class="get-involved-content">
           <h3>Get Involed/Programs</h3>
           <p>Our Outreach Programs provide free assistance to those struggling in the surrounding communities in the form of food, clothing, furniture, childrens’ programs and more. This support allows families and individuals to focus on their personal growth, family health, and stability while having basic needs met on a consistent basis.</p>
@@ -78,12 +75,16 @@
           <button type="submit" name="submit" class="see-more-button">SEE MORE</button>
         </div>
 
+        <div class="card-image2">
+          <!-- <img class="card-image" src="images/get_involed_programs.jpg"> -->
+        </div>
+
       </div>
 
       <div class="donate cards">
 
-          <div class="card-image">
-            <img class="card-image" src="images/donate_contact.jpg">
+          <div class="card-image3">
+            <!-- <img class="card-image" src="images/donate_contact.jpg"> -->
           </div>
 
             <div class="donate-content">
