--- a/index.html
+++ b/index.html
@@ -100,7 +100,14 @@
       
 
       <footer>
+        <div class="copyright">
+          <p>&copy; 2020 <strong>Philadelphia Dream Center</strong> | All rights reserved | <a href="#">HOME</a> | <a href="#">ABOUT</a> | <a href="#">GET INVOLED</a> | <a href="#">CONTACT</a> </p>
 
+          <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+          <a href="#"><i class="fab fa-facebook"></i></a>
+			<a href="#"><i class="fab fa-twitter"></i></a>
+			<a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
       </footer>
     
 </body>
