--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutus.html">About</a></li>
-            <li><a href="#">Get Involed</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Programs</a></li>
+            <li><a href="getinvoled.html">Get Involed</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="getinvoled.html">Programs</a></li>
           </ul>
         </nav>
       
@@ -38,14 +38,14 @@
           <h3 class="hero-text">
             Our dream is to grow this program to a 5,000 sq ft kitchen and 5,000 Sq ft food warehouse space where we can distribute over 25,000 healthy meals a month to children in need.
           </h3>
-          <button type="submit" name="submit" class="donate-button">DONATE</button>
+          <button onclick="document.location='contact.html'" class="donate-button">DONATE</button>
       </div>
 
       <div class="skyline">
 
 <h2 class="our-mission">Our Mission</h2>
 
-        <h3 class="skyline-text">The Dream Center serves as a resource center focused on providing support to those affected by homelessness, hunger, and the lack of education through residential and community outreach programs.  
+        <h3 class="skyline-text">Our mission is to connect broken people to a community of support by providing free resources and services that address immediate and long-term needs in the areas of homelessness, hunger, poverty, addiction, abuse, education and human trafficking.  
         </h3>
       </div>
 
@@ -61,7 +61,7 @@
         <h3>About Us</h3>
         <p>The Dream Center serves as a resource center focused on providing support to those affected by homelessness, hunger, and the lack of education through residential and community outreach programs.</p>
 
-        <button type="submit" name="submit" class="see-more-button">SEE MORE</button>
+        <button onclick="document.location='aboutus.html'" class="see-more-button">SEE MORE</button>
       </div>
 
       </div>
@@ -76,7 +76,7 @@
           <h3>Get Involed/Programs</h3>
           <p>Our Outreach Programs provide free assistance to those struggling in the surrounding communities in the form of food, clothing, furniture, childrens’ programs and more. This support allows families and individuals to focus on their personal growth, family health, and stability while having basic needs met on a consistent basis.</p>
 
-          <button type="submit" name="submit" class="see-more-button">SEE MORE</button>
+          <button onclick="document.location='getinvoled.html'" class="see-more-button">SEE MORE</button>
         </div>
 
         
@@ -93,7 +93,7 @@
               <h3>Donate/Contact</h3>
               <p> Donations can make a difference in the lives of many in Philadelphia by providing financial support through a one-time gift, a monthly pledge, or by becoming a program or event sponsor. Making a financial contribution online is the fastest, easiest, and safest way to help move our mission of impacting and restoring lives</p>
 
-              <button type="submit" name="submit" class="see-more-button">SEE MORE</button>
+              <button onclick="document.location='contact.html'" class="see-more-button">SEE MORE</button>
             </div>
       </div>
  
@@ -103,7 +103,7 @@
 
       <footer>
         <div class="copyright">
-          <p>&copy; 2020 <strong>Philadelphia Dream Center</strong> | All rights reserved | <a href="#">HOME</a> | <a href="#">ABOUT</a> | <a href="#">GET INVOLED</a> | <a href="#">CONTACT</a> </p>
+          <p>&copy; 2020 <strong>Philadelphia Dream Center</strong> | All rights reserved | <a href="index.html">HOME</a> | <a href="aboutus.html">ABOUT</a> | <a href="getinvoled.html">GET INVOLED</a> | <a href="contact.html">CONTACT</a> </p>
 
           <script src="https://kit.fontawesome.com/a076d05399.js"></script>
           <a href="#"><i class="fab fa-facebook"></i></a>
